fixing some typos

--- a/report/paper.tex
+++ b/report/paper.tex
@@ -445,8 +445,8 @@ produced as a result of previous computations. Moreover, an AI assistant can als
 versions of a file.
 
 \item[--] AI assistants can access the dependency graph created for a
-notebook. This allows the them to access the transformation history, which is the code
-that has already been run during the analysis. The gives assistants information about the
+notebook. This allows them to access the transformation history, which is the code
+that has already been run during the analysis. This gives assistants information about the
 context such as transformations that have already been performed.
 \end{itemize}
 
@@ -864,7 +864,7 @@ understand, it will simply drop the extra information not required by the client
 
 This makes it possible to exchange data efficiently. For example, a data frame where each cell
 is annotated with a probabilistically inferred type will be significantly larger than a data
-frame contianing just raw numbers. The content negotiation protocol allows the client to 
+frame containing just raw numbers. The content negotiation protocol allows the client to 
 request a data frame with just raw numbers, significantly reducing the size.
 
 \bibliographystyle{plain}
