--- a/report/paper.bib
+++ b/report/paper.bib
@@ -79,8 +79,22 @@
 	Number = {arXiv:1702.08608},
 	Title = {Towards A Rigorous Science of Interpretable Machine Learning},
 	Year = {2017}}
+	
+@inproceedings{ren2016squares,
+	Author = {Ren, Donghao and Amershi, Saleema and Lee, Bongshin and Suh, Jina and Williams, Jason},
+	Booktitle = {Conference on Visual Analytics Science and Technology (VAST)},
+	Month = {August},
+	Publisher = {IEEE},
+	Title = {Squares: Supporting Interactive Performance Analysis for Multiclass Classifiers},
+	Year = {2016}}
+
+@inproceedings{koh2017understanding,
+  author = {P. W. Koh and P. Liang},
+  booktitle = {International Conference on Machine Learning (ICML)},
+  title = {Understanding Black-box Predictions via Influence Functions},
+  year = {2017},
+}
 
 
- 
 
 
