--- a/tapp/paper.bib
+++ b/tapp/paper.bib
@@ -1,86 +1,111 @@
-
-@inproceedings{Kushmerick1997WrapperIF,
-	Author = {Nicholas Kushmerick and Daniel S. Weld and Robert B. Doorenbos},
-	Booktitle = {IJCAI},
-	Title = {Wrapper Induction for Information Extraction},
-	Year = {1997}}
-
-
-@article{abedjan2016detecting,
-	Author = {Abedjan, Ziawasch and Chu, Xu and Deng, Dong and Fernandez, Raul Castro and Ilyas, Ihab F and Ouzzani, Mourad and Papotti, Paolo and Stonebraker, Michael and Tang, Nan},
-	Journal = {Proceedings of the VLDB Endowment},
-	Number = {12},
-	Pages = {993--1004},
-	Title = {Detecting Data Errors: Where are we and what needs to be done?},
-	Volume = {9},
-	Year = {2016}}
-
-
-@article{ilyas2015,
-	Author = {Ihab F. Ilyas and Xu Chu},
-	Journal = {Foundations and Trends{\textregistered} in Databases},
-	Number = {4},
-	Pages = {281-393},
-	Title = {Trends in Cleaning Relational Data: Consistency and Deduplication},
-	Volume = {5},
-	Year = {2015}}
-	
-	
-@inproceedings{pinto03table,
-	Author = {David Pinto and Andrew McCallum and Xing Wei and W. Bruce Croft},
-	Booktitle = {ACM SIGIR Conference on Research and Development in Information Retrieval},
-	Title = {Table Extraction Using Conditional Random Fields},
-	Year = {2003}}
-
-
-@InProceedings{guyon_review_2016,
-  title = 	 {A brief Review of the ChaLearn AutoML Challenge: Any-time Any-dataset Learning without Human Intervention},
-  author = 	 {Isabelle Guyon and Imad Chaabane and Hugo Jair Escalante and Sergio Escalera and Damir Jajetic and James Robert Lloyd and N\'{u}ria Maci\`{a} and Bisakha Ray and Lukasz Romaszko and Mich\`{e}le Sebag and Alexander Statnikov and S\'{e}bastien Treguer and Evelyne Viegas},
-  booktitle = 	 {Proceedings of the Workshop on Automatic Machine Learning},
-  pages = 	 {21--30},
-  year = 	 {2016},
-  editor = 	 {Frank Hutter and Lars Kotthoff and Joaquin Vanschoren},
-  volume = 	 {64},
-  series = 	 {Proceedings of Machine Learning Research},
-  address = 	 {New York, New York, USA},
-  month = 	 {24 Jun},
-  publisher = 	 {PMLR},
-}
-
-
-@inproceedings{Ribeiro2016lime,
-	Author = {Ribeiro, Marco Tulio and Singh, Sameer and Guestrin, Carlos},
-	Booktitle = {ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
-	Pages = {1135--1144},
-	Title = {"Why Should I Trust You?": Explaining the Predictions of Any Classifier},
-	Year = {2016}}
-	 
- @unpublished{darksight,
- Author = {Kai Xu and Dae Hoon Park and Yi Chang and Charles Sutton},
- Title = { Interpreting Deep Classifiers by Visual Distillation of Dark Knowledge},
- Year = {2018}}
-
 @unpublished{datadiff,
  Author = {Charles Sutton and Tim Hobson and James Geddes and Rich Caruana},
  Title = { Data Diff: Interpretable, Executable Summaries of Changes in Distributions for Data Wrangling},
- Year = {2018}}
-
-
-@inproceedings{lipton:mythos,
-	Author = {Zachary C. Lipton},
-	Booktitle = {ICML Workshop on Human Interpretability in Machine Learning (WHI)},
-	Title = {The Mythos of Model Interpretability},
-	Year = {2016}}
-
-
-
-@techreport{doshi-velez17,
-	Author = {Finale Doshi-Velez and Been Kim},
-	Number = {arXiv:1702.08608},
-	Title = {Towards A Rigorous Science of Interpretable Machine Learning},
-	Year = {2017}}
-
-
- 
-
-
+ Year = {2018}
+}
+@inproceedings{providers,
+  title={Themes in information-rich functional programming for internet-scale data sources},
+  author={Syme, Don and Battocchi, Keith and Takeda, Kenji and Malayeri, Donna and Petricek, Tomas},
+  booktitle={Proceedings of the 2013 workshop on Data driven functional programming},
+  pages={1--4},
+  year={2013},
+  organization={ACM}
+}
+@inproceedings{thegamma,
+  title={Data exploration through dot-driven development},
+  author={Petricek, Tomas},
+  booktitle={LIPIcs-Leibniz International Proceedings in Informatics},
+  volume={74},
+  year={2017},
+  organization={Schloss Dagstuhl-Leibniz-Zentrum fuer Informatik}
+}
+@inproceedings{dataflow,
+  title={Dataflow Notebooks: Encoding and Tracking Dependencies of Cells},
+  author={Koop, David and Patel, Jay},
+  booktitle={9th $\{$USENIX$\}$ Workshop on the Theory and Practice of Provenance (TaPP 2017)},
+  year={2017},
+  organization={USENIX Association}
+}
+@inproceedings{jupyter,
+  title={Jupyter Notebooks-a format for reproducible computational workflows.},
+  author={Kluyver, Thomas and Ragan-Kelley, Benjamin and P{\'e}rez, Fernando and Granger, Brian E and Bussonnier, Matthias and Frederic, Jonathan and Kelley, Kyle and Hamrick, Jessica B and Grout, Jason and Corlay, Sylvain and others},
+  booktitle={ELPUB},
+  pages={87--90},
+  year={2016}
+}
+@inproceedings{kepler,
+  title={Kepler: an extensible system for design and execution of scientific workflows},
+  author={Altintas, Ilkay and Berkley, Chad and Jaeger, Efrat and Jones, Matthew and Ludascher, Bertram and Mock, Steve},
+  booktitle={Scientific and Statistical Database Management, 2004. Proceedings. 16th International Conference on},
+  pages={423--424},
+  year={2004},
+  organization={IEEE}
+}
+@article{taverna,
+  title={Taverna: a tool for the composition and enactment of bioinformatics workflows},
+  author={Oinn, Tom and Addis, Matthew and Ferris, Justin and Marvin, Darren and Senger, Martin and Greenwood, Mark and Carver, Tim and Glover, Kevin and Pocock, Matthew R and Wipat, Anil and others},
+  journal={Bioinformatics},
+  volume={20},
+  number={17},
+  pages={3045--3054},
+  year={2004},
+  publisher={Oxford University Press}
+}
+@article{rmarkdown,
+  title={rmarkdown: Dynamic Documents for R},
+  author={Allaire, J and Cheng, Joe and Xie, Yihui and McPherson, Jonathan and Chang, Winston and Allen, Jeff and Wickham, Hadley and Atkins, Aron and Hyndman, Rob and Arslan, R},
+  journal={R package version},
+  volume={1},
+  pages={9010},
+  year={2016}
+}
+@inproceedings{ipython,
+  title={The Jupyter/IPython architecture: a unified view of computational research, from interactive exploration to communication and publication.},
+  author={Ragan-Kelley, M and Perez, F and Granger, B and Kluyver, T and Ivanov, P and Frederic, J and Bussonnier, M},
+  booktitle={AGU Fall Meeting Abstracts},
+  year={2014}
+}
+@article{roslyn,
+  title={The Roslyn Project, Exposing the C\# and VB compiler’s code analysis},
+  author={Ng, Karen and Warren, Matt and Golde, Peter and Hejlsberg, Anders},
+  journal={White paper, Microsoft},
+  year={2011}
+}
+@inproceedings{live,
+  title={Living it up with a live programming language},
+  author={McDirmid, Sean},
+  booktitle={ACM SIGPLAN Notices},
+  volume={42},
+  number={10},
+  pages={623--638},
+  year={2007},
+  organization={ACM}
+}
+@article{subtext,
+  title={Subtext: uncovering the simplicity of programming},
+  author={Edwards, Jonathan},
+  journal={ACM SIGPLAN Notices},
+  volume={40},
+  number={10},
+  pages={505--518},
+  year={2005},
+  publisher={ACM}
+}
+@incollection{partial,
+  title={Type-directed partial evaluation},
+  author={Danvy, Olivier},
+  booktitle={Partial Evaluation},
+  pages={367--411},
+  year={1999},
+  publisher={Springer}
+}
+@article{incremental,
+  title={Incremental compilation in Magpie},
+  author={Schwartz, Mayer D and Delisle, Norman M and Begwani, Vimal S},
+  journal={ACM SIGPlan Notices},
+  volume={19},
+  number={6},
+  pages={122--131},
+  year={1984},
+  publisher={ACM}
+}
